fix: include suite filters in grafana links