@@ -255,7 +255,7 @@ public class ComposeBenchmarkRunner {
             bytes,
             loadResults.stream().map(this::toLoadSummary).toList(),
             queryResults.stream().map(this::toQuerySummary).toList(),
-            grafanaUrl(runId),
+            grafanaUrl(runId, config),
             "full".equals(config.profile())
         );
     }
@@ -314,9 +314,13 @@ public class ComposeBenchmarkRunner {
         return "compose-" + Instant.now().toEpochMilli();
     }
 
-    private String grafanaUrl(String runId) {
+    private String grafanaUrl(String runId, BenchmarkConfig config) {
         return "http://localhost:3000/d/benchmark?var-run_id="
-            + URLEncoder.encode(runId, StandardCharsets.UTF_8);
+            + URLEncoder.encode(runId, StandardCharsets.UTF_8)
+            + "&var-suite="
+            + URLEncoder.encode(config.suite().name(), StandardCharsets.UTF_8)
+            + "&var-query_set="
+            + URLEncoder.encode(config.suite().querySet(), StandardCharsets.UTF_8);
     }
 
     private static double elapsedSeconds(long startedNanos) {
